--- a/public/styles.css
+++ b/public/styles.css
@@ -1158,11 +1158,9 @@ input[type=number].btn-small {
 
 #hover-building-info > .building-info-body > .building-preview {
     width: 100%;
-    height: 512px;
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
+    /* height: 512px; */
     border: 1px solid black;
+    pointer-events: none;
 }
 
 .board-panel {
