--- a/public/styles.css
+++ b/public/styles.css
@@ -807,11 +807,49 @@ input[type=number].btn-small {
     background-size: 94%;
     background-repeat: no-repeat;
     background-position: center;
+    position: relative;
     float: left;
+    transition: 0.125s;
+    overflow: hidden;
 }
 
 .build-icon:hover {
     background-color: #3b3b3b;
+}
+
+/*
+.build-icon::after {
+    content: '';
+    width: 5px;
+    height: 5px;
+    background-color: #ff8034;
+    position: absolute;
+    bottom: 4px;
+    left: 4px;
+    border-radius: 50%;
+    pointer-events: none;
+}
+*/
+
+.build-icon:hover:not(.ignore-transform) {
+    background-position: top center;
+}
+
+.build-subicon {
+    width: 100%;
+    height: 30px;
+    background-color: #0006;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    position: absolute;
+    bottom: -30px;
+    left: 0;
+    transition: 0.125s;
+}
+
+.build-icon:hover .build-subicon {
+    bottom: 0;
 }
 
 .resource-col {
