--- a/public/games/foxhole/styles.css
+++ b/public/games/foxhole/styles.css
@@ -185,10 +185,15 @@ body {
 .statistics-time-dropdown select {
     width: 100%;
     height: 100%;
-    border: none;
+    border: 1px solid black;
     border-radius: 0;
     background-color: #090909;
     padding: 0 12px;
+    cursor: pointer;
+}
+
+.statistics-time-dropdown select:hover {
+    border-color: white;
 }
 
 .layer-selection {
