Increased contrast with some red / green text.

--- a/public/games/foxhole/styles.css
+++ b/public/games/foxhole/styles.css
@@ -126,7 +126,7 @@ body {
 }
 
 .statistics-panel-fac-output .resource-amount {
-    color: #03b003;
+    color: #00ca00;
 }
 
 .statistics-panel .construction-options .btn-small {
