--- a/public/styles.css
+++ b/public/styles.css
@@ -737,28 +737,32 @@ input[type=number].btn-small {
 }
 
 #construction-page .construction-item-category {
+    height: 34px;
     background: #0f0f0f;
-    padding: 4px 8px;
+    padding: 4px 8px 4px 34px;
     border: 1px solid black;
     cursor: pointer;
     clear: both;
+    position: relative;
 }
 
 #construction-page .construction-item-category:hover {
     background: #1b1b1b;
 }
 
-/*
 #construction-page .construction-item-category-icon {
     display: inline-block;
-    width: 20px;
-    height: 20px;
-    background-size: 22px;
+    width: 34px;
+    height: 33px;
+    background-size: 75%;
     background-repeat: no-repeat;
     background-position: center;
     vertical-align: middle;
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0.75;
 }
-*/
 
 #about-page > .about-section {
     margin-bottom: 20px;
@@ -994,7 +998,7 @@ input[type=number].btn-small {
     margin-bottom: 8px;
 }
 
-.upgrade-list > .upgrade-button {
+.upgrade-button {
     display: inline-block;
     background: none;
     border: none;
@@ -1002,7 +1006,7 @@ input[type=number].btn-small {
     padding: 2px;
 }
 
-.upgrade-list > .upgrade-button > .resource-icon {
+.upgrade-button > .resource-icon {
     width: 52px;
     height: 52px;
     background-color: #151515;
@@ -1010,14 +1014,32 @@ input[type=number].btn-small {
     float: none;
 }
 
-.upgrade-list > .upgrade-button:not(.selected-upgrade) > .resource-icon:hover {
+.upgrade-button:not(.selected-upgrade) > .resource-icon:hover {
     background-color: black;
     border-color: white;
 }
 
-.upgrade-list > .upgrade-button.selected-upgrade > .resource-icon {
+.upgrade-button.selected-upgrade > .resource-icon {
     background-color: #2c1407;
     border-color: #ff8f00;
+}
+
+.upgrade-buttons-small {
+    padding: 6px;
+}
+
+.upgrade-buttons-small .upgrade-button {
+    width: 42px;
+    height: 42px;
+}
+
+.upgrade-buttons-small .upgrade-button > .resource-icon {
+    width: 100%;
+    height: 100%;
+}
+
+.upgrade-button.btn-inactive > .resource-icon {
+    opacity: 0.25;
 }
 
 .production-stats {
