--- a/public/styles.css
+++ b/public/styles.css
@@ -760,7 +760,7 @@ input[type=number].btn-small {
 
 #construction-page .construction-item-category {
     height: 34px;
-    background: #0f0f0f;
+    background-color: #0f0f0f;
     padding: 4px 8px 4px 34px;
     border: 1px solid black;
     cursor: pointer;
@@ -768,8 +768,9 @@ input[type=number].btn-small {
     position: relative;
 }
 
-#construction-page .construction-item-category:hover {
-    background: #1b1b1b;
+#construction-page .construction-item-category:hover,
+.build-icon.ignore-transform:hover {
+    background-color: #1b1b1b;
 }
 
 #construction-page .construction-item-category-icon {
@@ -922,6 +923,10 @@ input[type=number].btn-small {
     pointer-events: none;
 }
 */
+
+.build-icon.ignore-transform {
+    background-color: #0d0d0d;
+}
 
 .build-icon:hover:not(.ignore-transform) {
     background-position: top center;
@@ -1322,6 +1327,9 @@ input[type=number].btn-small {
 #hover-building-info > .building-info-body > .building-preview {
     width: 100%;
     /* height: 512px; */
+    background-image: url('/assets/grid_32_dark.webp');
+    background-position: top center;
+    background-size: 20px;
     border: 1px solid black;
     pointer-events: none;
 }
